# trans

./: app.py  config.py  pyproject.toml  Филимонов_БИН2003_Переводчик.docx
