[tool.poetry]
name = "flask_proj"
version = "0.1.0"
description = ""
authors = ["MargoRSq <slava1kvartovkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
requests = "^2.26.0"
starlette = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
